src/styles/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {

    @font-face {
        font-family: Montserrat;
        src: url('../assets/fonts/montserrat-regular-webfont.woff');
    }

    @font-face {
        font-family: TypoGraphica;
        src: url('../assets/fonts/typographica-webfont.woff') format('woff');
    }

    @font-face {
        font-family: Rajdhani;
        src: url('../assets/fonts/rajdhani-regular-webfont.woff');
    }

}

* {
    margin: 0;
    padding: 0;
}

body, .font-content{
    font-family: Montserrat; 
}

h1, h2, h3, h4, h5, .font-headers{
    font-family: Rajdhani;
}

.font-title{
    font-family: TypoGraphica!important;
}

/* --- Navigation --- */

.navbar{
    @apply flex flex-row items-center rounded-br-xl shadow-md bg-gray-900;
    height:60px;
    width: calc(100% - 10px);
}

.navbarBg{
    background-color: #e9e9e9;
    position:absolute;
    top:0;
    left:0;
    width:100%;
    height:60px;
    z-index:-1;
}

.mobileNav{
    @apply bg-gray-900 bg-opacity-95 rounded-r-xl shadow-md;
    position:fixed;
    height: calc(100% - 80px);
    top: 70px;
    width: calc(100% - 10px);
    max-width: 400px;
    transition: ease-in-out 0.3s;
    z-index:999;
}

@media only screen and (min-width: 768px) {
    .navbar, .navbarBg{
        height: 80px ;
    }

    .mobileNav{
        @apply bg-opacity-100;
        height: calc(100% - 100px);
        top: 90px;
        max-width: 300px;
    }
}

.mobileNavOpen{
    left: 0;
}

.mobileNavClosed{
    left: calc(-100% - 10px);
}

.menuLink{
    @apply font-headers font-bold flex flex-row items-center text-gray-100 text-3xl my-2;
}

.menuLink svg{
    @apply transition-all duration-100 text-4xl;
}

.menuLink:hover svg{
    @apply text-blue-500 transform scale-105;
}

.footerLink{
    @apply text-gray-900 text-xl md:mx-auto;
}

.menuLink.footerLink svg{
    @apply md:mr-2;
}

.header{
    @apply lowercase tracking-tight mt-2 text-4xl md:text-5xl;
    line-height:0.5;
}

.subHeader{
    @apply lowercase text-sm md:text-xl font-extrabold tracking-wider;
}

button{
    @apply font-headers;
}

/* --- Hero --- */

.heroBg {
    position:absolute;
    left:50%;
    transform: translateX(-50%);
    top:0;
    z-index:-1;
    background-color: #e9e9e9;
    clip-path: ellipse(189% 100% at 62% 0%);
}

@media only screen and (min-width: 768px) {
    .heroBg {
        clip-path: ellipse(80% 100% at 60% 0%);
    }
}

div:nth-child(2) > .featuredImage > picture > img, #hero > div.featuredImage > picture > img{
    transition: ease 0.5s;
}

.featuredImage:hover > picture > img{
    transform: scale(1.025);
    transition: ease 0.5s;
}

.featureImage1{
    max-height:500px;
}

#indexWrapper > div > div > div > div:hover > button {
    transform: scale(1.025);
    transition: linear 0.1s;
}

#indexWrapper > div > div > div > div > button {
    transition: linear 0.1s;
}

/* --- Product Tabs --- */

.tab{
    @apply flex flex-row items-center mx-auto py-2 pl-3 pr-4 rounded-l-full;
    border-top-right-radius: 2000px;
    border-bottom-right-radius: 2000px;
}

.tab h1{
    @apply font-bold text-2xl md:text-3xl;
}

.tab:hover h1{
    @apply text-blue-600;
}

.tabActive{
    @apply bg-gray-100 text-gray-900 hover:bg-gray-200;
}

.tabActive h1{
    @apply text-gray-900;
}

.tabInactive{
    @apply bg-gray-900 hover:bg-gray-800;
}

.tabInactive h1{
    @apply text-gray-100;
}

.tabNumber{
    @apply flex flex-row items-center justify-center rounded-full h-8 w-8 font-bold text-xl mr-4 shadow-inner;
}

.tabNumberActive{
    @apply bg-gray-900 text-gray-100;
}

.tabNumberInactive{
    @apply bg-gray-100 text-gray-900;
    box-shadow: 0 0 0 0 rgba(14, 165, 233, 1);
	transform: scale(1);
	animation: pulse 1.5s infinite;
}


/* --- Contact --- */

@media only screen and (min-width: 768px) {
    .contactCopy{
        height:calc(100% - 20px);
    }
}

textarea.contactMessage{
    resize:none;
}

.contactBg{
    position:absolute;
    left:50%;
    bottom:0;
    z-index:-1;
    background-color: #e9e9e9;
    clip-path: ellipse(189% 100% at 62% 0%);
    -moz-transform: scale(1, -1);
    -webkit-transform: scale(1, -1);
    -o-transform: scale(1, -1);
    -ms-transform: scale(1, -1);
    transform: scale(1, -1) translateX(-50%);
}


@media only screen and (min-width: 768px) {
    .contactBg {
        clip-path: ellipse(80% 100% at 60% 0%);
    }
}

/* --- Footer --- */

.footer{
    @apply flex flex-row items-center;
    z-index:2;
}

.footerNav{
    @apply fixed w-full bg-gray-100 rounded-t-lg;
    height: 400px;
    transition: ease-in-out 0.3s;
    z-index:1;
}

@media only screen and (min-width: 768px) {
    .footerNav{
        height:150px;
    }
}

.footerNavOpen{
    bottom:0;
}

.footerNavClosed{
    bottom: -400px;
}

@media only screen and (min-width: 768px) {
    
    .footerNavClosed{
        bottom: -150px;
    }
}

/* --- Social --- */

.socialIcon{
    @apply text-3xl mr-1 hover:text-blue-500 cursor-pointer;
}

.socialMenuIcon{
    @apply text-4xl mr-2 text-gray-100;
}

/* --- Scrollbars --- */

::-webkit-scrollbar {
    width: 8px;
}

::-webkit-scrollbar-track {
  box-shadow: inset 0 0 0 rgb(0, 0, 0); 
}
       
::-webkit-scrollbar-thumb {
  @apply bg-gray-900;
  background-clip: padding-box; 
}

::-webkit-scrollbar-thumb:hover {
    @apply bg-blue-600 cursor-pointer;
    background-clip: padding-box; 
  }

#contact ::-webkit-scrollbar {
    width: 5px;
}


/* --- Services Page --- */

.servicesTab{
    @apply flex flex-col my-2 shadow-md;
}

.servicesTabButton{
    @apply flex flex-row items-center bg-gray-900 p-2 transition-all duration-100 z-10 md:py-3 md:pl-3 cursor-pointer;
}

.servicesTabHeader{
    @apply font-medium text-xl md:text-3xl font-semibold text-gray-100;
}

.servicesTabIcon{
    @apply text-2xl md:text-3xl mr-2 text-gray-100 transform;
}

.servicesTabButton:hover .servicesTabIcon{
    @apply text-blue-500;

}

.servicesTabIconActive{
    @apply -rotate-90 text-blue-500;
}

.servicesTabBody{
    @apply flex flex-col shadow-md bg-gray-100 w-full;
}

.servicesTabBodyActive{
    @apply relative rounded-b-md;
}

.servicesTabBodyInactive{
    @apply rounded-md h-0;
}

.servicesTabContent{
    @apply p-1;
}

.servicesTabBodyInactive .servicesTabContent{
    display: none;
}

.servicesTabBodyActive .servicesTabContent{
    @apply flex-col;
    display: flex;
}

.productFitListItem{
    @apply flex flex-row items-center mt-2 mb-4;
}

.productFitListItemNumber{
    @apply relative bg-gray-900 rounded-full w-6 h-6 shadow-md px-3 pb-1 pt-3;
}

.productFitListItemNumber span{
    @apply absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-gray-100 font-semibold;
}

.productFitListItemText{
    @apply text-sm md:text-base ml-2 leading-tight font-semibold;
}

.ecommerceIcon{
    @apply mx-auto my-4 text-6xl md:text-7xl cursor-pointer filter drop-shadow-md transform hover:scale-105;
}

.shopifyIcon:hover{
    color: rgb(150,191,71);
}

.wooCommerceIcon:hover{
    color: rgb(127,84,179);
}

.bigCommerceIcon:hover{
    color: rgb(51,49,61);
}

.magentoIcon:hover{
    color: rgb( (244, 111, 37));
}

.faqContent{
    @apply text-sm md:text-lg my-2;
}

.faqContent p{
    @apply md:leading-tight my-2;
}

.bgDark{
    @apply bg-blue-600 mr-1;
}

 /* --- Portfolio --- */

 .portfolioCard{
     @apply flex flex-col p-3 rounded-md shadow-lg bg-gray-100;
 }

 .portfolioTag{
     @apply bg-blue-600 hover:bg-blue-700 rounded-full shadow-md text-gray-100 font-headers text-xs font-semibold px-2 py-1 mr-1 mt-1 cursor-pointer;
 }

 .portfolioGallery > div {
     @apply flex flex-row items-center w-full -mx-1;
 }

 .portfolioGalleryImage{
    @apply cursor-pointer;
 }

 .portfolioGalleryImage:hover{
    transform: scale(1.025);
    transition: ease 0.3s;
}

  /* --- Components --- */

.popover{
    @apply fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 rounded-lg shadow-lg z-30 bg-gray-100;
    height:calc(100vh - 25px);
    width:calc(100vw - 25px);
    max-width: 992px;
    margin: auto;
    overflow:auto;
}

/* --- Toasts --- */

.Toastify__toast-container {
    @apply fixed bottom-2 right-2 p-0 ml-auto !important;
    max-width: 280px;
  }
  
  .custom-toast {
    @apply font-bold shadow-lg rounded-md text-white text-lg min-h-0 pl-2 pr-4 cursor-pointer font-headers !important;
  }
  
  .red-toast {
    @apply bg-red-700 hover:bg-red-800 !important;
  }
  
  .green-toast {
    @apply bg-green-700 hover:bg-green-800 !important;
  }
  
  .Toastify__close-button {
    @apply absolute top-1 right-1 text-white opacity-100 !important;
  }

/* --- Effects --- */

@keyframes spin {
    from {
        transform:rotate(0deg);
    }
    to {
        transform:rotate(360deg);
    }
}

.spin{
    animation-name: spin;
    animation-duration: 2000ms;
    animation-iteration-count: infinite;
    animation-timing-function: linear; 
}

@keyframes pulse {
	0% {
		transform: scale(0.95);
		box-shadow: 0 0 0 0 rgb(96, 205, 255);
	}

	70% {
		transform: scale(1);
		box-shadow: 0 0 0 10px rgba(104, 207, 255, 0);
	}

	100% {
		transform: scale(0.95);
		box-shadow: 0 0 0 0 rgba(29, 173, 240, 0);
	}
}

.arrowRight{
  animation: slideRight 1.25s infinite;
}

@keyframes slideRight {
    from {
        transform: translateX(0px);
    }
    50%{
        transform: translateX(10px);
    }
    to {
        transform: translateX(0px);
    }
}

.arrowLeft{
    animation: slideLeft 1.25s 0.625s infinite;
}

@keyframes slideLeft {
    from {
        transform: rotate(180deg) translateX(0px);
    }
    50%{
        transform: rotate(180deg) translateX(-10px);
    }
    to {
        transform:  rotate(180deg)translateX(0px);
    }
}

.anchor {
    display: block;
    position: relative;
    top: 250px;
    visibility: hidden;
}

/* --- Blog Posts --- */

.blogPostBody{
    @apply md:mx-2;
}

.blogPostBody h1{
    @apply text-2xl md:text-3xl font-bold mt-6 mb-4 border-b border-blue-500 leading-5 pb-1;
}

.blogPostBody h2{
    @apply text-xl md:text-2xl font-bold my-2;
}

.blogPostBody h3{
    @apply text-lg md:text-xl font-bold my-1;
}

.blogPostBody h4{
    @apply text-base md:text-lg font-bold;
}

.blogPostBody p{
    @apply text-sm md:text-base my-2;
}

.blogPostBody .subheader{
    @apply text-blue-700 leading-none -mt-2;
}

.blogPostBody ul{
    @apply text-sm md:text-base list-disc pl-4 pr-2 md:pl-6 my-4;
}

.blogPostBody li{
    @apply mb-1;
}

.blogPostBody img{
    @apply my-6 shadow-md rounded-lg cursor-pointer hover:shadow-lg;
}

.blogPostBody a{
    @apply text-blue-500 hover:text-blue-600 hover:font-semibold;
}

/* --- Social Sharing --- */

.socialSharingButton{
    @apply text-2xl hover:text-blue-500 mr-1 transform hover:scale-105 cursor-pointer;
}

#contact > .lazyload-wrapper{
    @apply w-full flex flex-col items-center;
}

